# skaja

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  test_utils.rs
integration-tests/tests/: get_command.rs  multi_client.rs  single_client.rs
skaja-client/: Cargo.toml
skaja-client/src/: client.rs  lib.rs  main.rs
skaja-lib/: Cargo.toml
skaja-lib/src/: constants.rs  lib.rs
skaja-lib/src/domains/: command.rs  mod.rs  request.rs  response.rs
skaja-server/: Cargo.toml
skaja-server/src/: lib.rs  main.rs  server.rs
skaja-server/src/domains/: config.rs
src/: lib.rs  types.rs
